Fix: mis-aligned web header text items

--- a/http/html/static/css/main.css
+++ b/http/html/static/css/main.css
@@ -91,6 +91,7 @@ header nav {
  */
 .navbar {
   display: flex;
+  align-items: baseline;
   gap: 2em;
 }
 
